[gd_scene load_steps=18 format=3]

[ext_resource type="Texture2D" path="res://textures/TactilePaving002_1K-JPG_NormalDX.jpg" id="1_8563t"]
[ext_resource type="PackedScene" path="res://assets/eslim.tscn" id="2_pge1y"]
[ext_resource type="Script" path="res://scripts/eslim.gd" id="3_d5on7"]
[ext_resource type="PackedScene" path="res://imports/block.glb" id="4_t4lj4"]
[ext_resource type="MeshLibrary" path="res://assets/blockLib.tres" id="5_msliw"]
[ext_resource type="PackedScene" path="res://imports/enemy.tscn" id="6_yruvq"]
[ext_resource type="ArrayMesh" path="res://coin.tres" id="7_wfyft"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_jbqu5"]
sky_top_color = Color(0.839216, 0.462745, 0.219608, 1)
sky_horizon_color = Color(0.980392, 0.654902, 0.490196, 1)
ground_bottom_color = Color(0.133333, 0.0823529, 0.219608, 1)
ground_horizon_color = Color(0.615686, 0.270588, 0.0509804, 1)

[sub_resource type="Sky" id="Sky_hw4m4"]
sky_material = SubResource("ProceduralSkyMaterial_jbqu5")

[sub_resource type="Environment" id="Environment_aalbh"]
background_mode = 2
sky = SubResource("Sky_hw4m4")
glow_enabled = true

[sub_resource type="BoxShape3D" id="BoxShape3D_bmx63"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_d1fga"]
albedo_color = Color(0.345098, 0.862745, 0.823529, 1)
normal_enabled = true
normal_texture = ExtResource("1_8563t")
uv1_scale = Vector3(0.2, 0.2, 0.2)
uv1_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_ha4a7"]
material = SubResource("StandardMaterial3D_d1fga")
size = Vector3(60, 1, 60)

[sub_resource type="Animation" id="Animation_1aqi7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-3.2157, 1.00454, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_lgi32"]
resource_name = "quest_animation"
length = 6.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4, 5, 6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(-13.0154, 1.00454, 0), Vector3(-2.87854, 1.00454, 0), Vector3(-2.87854, 1.00454, 8.07521), Vector3(-2.87854, 1.00454, 16.778), Vector3(-2.87854, 1.00454, 8.07521), Vector3(-2.87854, 1.00454, 0), Vector3(-13.0154, 1.00454, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4, 5, 6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -2.11935), Vector3(1.15045, 3.14159, 1.02224), Vector3(0.504854, 3.14159, 1.02224), Vector3(1.15045, 3.14159, 1.02224), Vector3(0, 0, -2.11935), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_42070"]
_data = {
"RESET": SubResource("Animation_1aqi7"),
"quest_animation": SubResource("Animation_lgi32")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_o0nsf"]

[node name="Node3D" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_aalbh")

[node name="Floor" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
shape = SubResource("BoxShape3D_bmx63")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.499158, 0)
mesh = SubResource("BoxMesh_ha4a7")

[node name="Eslim" type="CharacterBody3D" parent="." instance=ExtResource("2_pge1y")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -2.5344, 0.43379, 11.1036)
velocity = Vector3(-1.04858, 0, 4.52313e-08)
script = ExtResource("3_d5on7")

[node name="cam1" type="Camera3D" parent="Eslim"]
transform = Transform3D(2, 0, 0, 0, 1.99991, 0.0189886, 0, -0.0189886, 1.99991, 0, 8.67284, 21.0707)
current = true

[node name="cam2" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.00820298, 0.999966, 0, -0.999966, 0.00820298, -3.25636, 39.3417, 1.07626)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.63694, -0.0100103, -0.770849, 0.770914, 0.00827062, 0.636886, 0, -0.999916, 0.0129849, -6.34654, 10.0453, 0)
light_energy = 0.7
shadow_enabled = true

[node name="block" type="Node3D" parent="." instance=ExtResource("4_t4lj4")]

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource("5_msliw")
cell_size = Vector3(1, 1, 1)
data = {
"cells": PackedInt32Array(4, 29, 0, 5, 29, 0, 7, 29, 0, 6, 29, 0, 8, 29, 0, 9, 29, 0, 10, 29, 0, 12, 29, 0, 11, 29, 0, 13, 29, 0, 15, 29, 0, 16, 29, 0, 14, 29, 0, 3, 29, 0, 1, 29, 0, 2, 29, 0, 0, 29, 0, 65535, 29, 0, 65534, 29, 0, 65533, 29, 0, 65532, 29, 0, 65531, 29, 0, 65530, 29, 0, 65529, 29, 0, 65528, 29, 0, 65527, 29, 0, 65525, 29, 0, 65526, 29, 0, 65524, 29, 0, 65523, 29, 0, 65522, 29, 0, 65520, 29, 0, 65521, 29, 0, 65519, 29, 0, 65518, 29, 0, 65516, 29, 0, 65517, 29, 0, 65515, 29, 0, 65514, 29, 0, 65513, 29, 0, 65511, 29, 0, 65512, 29, 0, 65510, 29, 0, 65509, 29, 0, 65508, 29, 0, 65506, 29, 0, 65507, 29, 0, 65506, 28, 0, 65506, 27, 0, 65506, 26, 0, 65506, 25, 0, 65506, 24, 0, 65506, 23, 0, 65506, 22, 0, 65506, 21, 0, 65506, 20, 0, 65506, 19, 0, 65506, 17, 0, 65506, 18, 0, 65506, 16, 0, 65506, 15, 0, 65506, 14, 0, 65506, 13, 0, 65506, 12, 0, 65506, 11, 0, 65506, 10, 0, 65506, 9, 0, 65506, 8, 0, 65506, 7, 0, 65506, 6, 0, 65506, 5, 0, 65506, 4, 0, 65506, 3, 0, 65506, 2, 0, 65506, 1, 0, 65506, 0, 0, 65506, 65535, 0, 65506, 65534, 0, 65506, 65533, 0, 65506, 65531, 0, 65506, 65532, 0, 65506, 65530, 0, 65506, 65529, 0, 65506, 65527, 0, 65506, 65528, 0, 65506, 65526, 0, 65506, 65525, 0, 65506, 65524, 0, 65506, 65522, 0, 65506, 65523, 0, 65506, 65521, 0, 65506, 65520, 0, 65506, 65518, 0, 65506, 65519, 0, 65506, 65517, 0, 65506, 65516, 0, 65506, 65515, 0, 65506, 65514, 0, 65506, 65513, 0, 65506, 65511, 0, 65506, 65512, 0, 38, 19, 0, 17, 29, 0, 18, 29, 0, 19, 29, 0, 20, 29, 0, 21, 29, 0, 22, 29, 0, 23, 29, 0, 24, 29, 0, 25, 29, 0, 26, 29, 0, 27, 29, 0, 28, 29, 0, 29, 29, 0, 29, 28, 0, 29, 27, 0, 29, 26, 0, 29, 25, 0, 29, 24, 0, 29, 23, 0, 29, 22, 0, 29, 21, 0, 29, 20, 0, 29, 19, 0, 29, 18, 0, 29, 17, 0, 29, 16, 0, 29, 15, 0, 29, 14, 0, 29, 13, 0, 29, 12, 0, 29, 11, 0, 29, 10, 0, 29, 9, 0, 29, 8, 0, 29, 7, 0, 29, 6, 0, 29, 4, 0, 29, 5, 0, 29, 3, 0, 29, 2, 0, 29, 1, 0, 29, 65535, 0, 29, 0, 0, 29, 65534, 0, 29, 65533, 0, 29, 65532, 0, 29, 65531, 0, 29, 65530, 0, 29, 65529, 0, 29, 65528, 0, 29, 65527, 0, 29, 65526, 0, 29, 65525, 0, 29, 65524, 0, 29, 65523, 0, 29, 65522, 0, 29, 65521, 0, 29, 65520, 0, 29, 65519, 0, 29, 65517, 0, 29, 65518, 0, 29, 65516, 0, 29, 65514, 0, 29, 65515, 0, 29, 65513, 0, 29, 65512, 0, 29, 65511, 0, 29, 65510, 0, 29, 65509, 0, 29, 65508, 0, 29, 65506, 0, 29, 65507, 0, 27, 65506, 0, 28, 65506, 0, 26, 65506, 0, 24, 65506, 0, 25, 65506, 0, 23, 65506, 0, 22, 65506, 0, 21, 65506, 0, 20, 65506, 0, 19, 65506, 0, 18, 65506, 0, 17, 65506, 0, 15, 65506, 0, 16, 65506, 0, 14, 65506, 0, 13, 65506, 0, 12, 65506, 0, 11, 65506, 0, 10, 65506, 0, 9, 65506, 0, 8, 65506, 0, 6, 65506, 0, 7, 65506, 0, 5, 65506, 0, 3, 65506, 0, 4, 65506, 0, 2, 65506, 0, 1, 65506, 0, 0, 65506, 0, 65535, 65506, 0, 65534, 65506, 0, 65533, 65506, 0, 65532, 65506, 0, 65531, 65506, 0, 65530, 65506, 0, 65529, 65506, 0, 65528, 65506, 0, 65527, 65506, 0, 65526, 65506, 0, 65525, 65506, 0, 65524, 65506, 0, 65523, 65506, 0, 65522, 65506, 0, 65521, 65506, 0, 65520, 65506, 0, 65519, 65506, 0, 65518, 65506, 0, 65517, 65506, 0, 65516, 65506, 0, 65515, 65506, 0, 65514, 65506, 0, 65513, 65506, 0, 65512, 65506, 0, 65511, 65506, 0, 65510, 65506, 0, 65509, 65506, 0, 65507, 65506, 0, 65508, 65506, 0, 65506, 65506, 0, 65506, 65507, 0, 65506, 65508, 0, 65506, 65510, 0, 65506, 65509, 0, 65512, 24, 0, 65513, 24, 0, 65514, 24, 0, 65516, 24, 0, 65515, 24, 0, 65517, 24, 0, 65518, 24, 0, 65519, 24, 0, 65520, 24, 0, 65520, 23, 0, 65520, 22, 0, 65520, 21, 0, 65520, 20, 0, 65520, 19, 0, 65520, 17, 0, 65520, 18, 0, 65520, 16, 0, 65520, 15, 0, 65518, 15, 0, 65519, 15, 0, 65517, 15, 0, 65516, 15, 0, 65515, 15, 0, 65513, 15, 0, 65514, 15, 0, 65512, 15, 0, 65511, 15, 0, 65516, 20, 0, 65515, 20, 0, 65514, 20, 0, 65513, 20, 0, 65511, 20, 0, 65512, 20, 0, 65511, 19, 0, 65511, 18, 0, 65509, 18, 0, 65510, 18, 0, 65508, 18, 0, 65507, 18, 0, 65511, 14, 0, 65511, 13, 0, 65510, 13, 0, 65508, 13, 0, 65509, 13, 0, 65507, 13, 0, 65525, 24, 0, 65525, 23, 0, 65525, 22, 0, 65525, 21, 0, 65525, 20, 0, 65525, 19, 0, 65526, 19, 0, 65528, 19, 0, 65527, 19, 0, 65525, 25, 0, 65526, 25, 0, 65528, 25, 0, 65527, 25, 0, 65529, 25, 0, 65530, 25, 0, 65531, 25, 0, 65532, 25, 0, 65533, 25, 0, 65534, 25, 0, 65535, 25, 0, 0, 25, 0, 6, 25, 0, 7, 25, 0, 8, 25, 0, 9, 25, 0, 10, 25, 0, 11, 25, 0, 12, 25, 0, 13, 25, 0, 14, 25, 0, 15, 25, 0, 6, 24, 0, 6, 23, 0, 6, 22, 0, 6, 21, 0, 6, 20, 0, 6, 19, 0, 8, 19, 0, 7, 19, 0, 10, 19, 0, 11, 19, 0, 9, 19, 0, 12, 19, 0, 13, 19, 0, 14, 19, 0, 15, 19, 0, 16, 19, 0, 17, 19, 0, 18, 19, 0, 20, 19, 0, 19, 19, 0, 22, 28, 0, 22, 27, 0, 22, 26, 0, 22, 25, 0, 22, 24, 0, 23, 24, 0, 24, 24, 0, 25, 24, 0, 25, 23, 0, 26, 23, 0, 26, 22, 0, 20, 18, 0, 20, 17, 0, 20, 16, 0, 20, 15, 0, 20, 14, 0, 26, 21, 0, 26, 20, 0, 26, 19, 0, 26, 18, 0, 26, 16, 0, 26, 17, 0, 26, 15, 0, 26, 14, 0, 26, 13, 0, 20, 13, 0, 20, 12, 0, 20, 11, 0, 18, 11, 0, 19, 11, 0, 17, 11, 0, 15, 11, 0, 16, 11, 0, 14, 11, 0, 13, 11, 0, 13, 10, 0, 13, 8, 0, 13, 9, 0, 22, 6, 0, 23, 6, 0, 24, 6, 0, 26, 6, 0, 25, 6, 0, 26, 12, 0, 26, 11, 0, 26, 10, 0, 26, 9, 0, 26, 8, 0, 26, 7, 0, 21, 6, 0, 20, 6, 0, 19, 6, 0, 18, 6, 0, 18, 5, 0, 18, 4, 0, 17, 4, 0, 16, 4, 0, 15, 4, 0, 14, 4, 0, 12, 8, 0, 11, 8, 0, 9, 8, 0, 10, 8, 0, 8, 8, 0, 7, 8, 0, 7, 7, 0, 7, 6, 0, 65529, 19, 0, 65529, 18, 0, 65529, 17, 0, 65529, 16, 0, 65529, 14, 0, 65529, 15, 0, 65529, 13, 0, 65529, 12, 0, 65529, 11, 0, 65529, 10, 0, 65529, 9, 0, 65529, 8, 0, 65529, 7, 0, 65529, 6, 0, 5, 19, 0, 4, 19, 0, 3, 19, 0, 2, 19, 0, 1, 19, 0, 65535, 19, 0, 0, 19, 0, 65535, 18, 0, 65535, 17, 0, 65535, 16, 0, 65535, 15, 0, 65535, 14, 0, 65535, 13, 0, 0, 13, 0, 2, 13, 0, 1, 13, 0, 65535, 9, 0, 0, 9, 0, 1, 9, 0, 2, 9, 0, 3, 9, 0, 4, 9, 0, 5, 9, 0, 6, 9, 0, 7, 9, 0, 65535, 8, 0, 65535, 7, 0, 65535, 6, 0, 3, 13, 0, 4, 13, 0, 5, 13, 0, 5, 14, 0, 10, 9, 0, 10, 11, 0, 10, 10, 0, 10, 12, 0, 10, 13, 0, 10, 14, 0, 11, 14, 0, 12, 14, 0, 13, 14, 0, 15, 14, 0, 14, 14, 0, 15, 15, 0, 65529, 5, 0, 65530, 5, 0, 65530, 4, 0, 65530, 3, 0, 65530, 2, 0, 65511, 7, 0, 65513, 8, 0, 65512, 7, 0, 65514, 8, 0, 65515, 8, 0, 65515, 9, 0, 65515, 10, 0, 65516, 10, 0, 65517, 10, 0, 65519, 10, 0, 65520, 10, 0, 65518, 10, 0, 65521, 10, 0, 65522, 10, 0, 65524, 10, 0, 65523, 10, 0, 65525, 10, 0, 65526, 10, 0, 65527, 10, 0, 65528, 11, 0, 65528, 10, 0, 65528, 15, 0, 65526, 15, 0, 65527, 15, 0, 65525, 15, 0, 65525, 14, 0, 65511, 6, 0, 65511, 5, 0, 65511, 4, 0, 65511, 3, 0, 65512, 3, 0, 65513, 3, 0, 65514, 3, 0, 65515, 3, 0, 65516, 3, 0, 65517, 3, 0, 65518, 3, 0, 65519, 3, 0, 65520, 3, 0, 65520, 5, 0, 65520, 4, 0, 65525, 3, 0, 65525, 4, 0, 65525, 5, 0, 65525, 2, 0, 65526, 2, 0, 65527, 2, 0, 65528, 2, 0, 65529, 2, 0, 65520, 2, 0, 65520, 1, 0, 65520, 0, 0, 65520, 65535, 0, 65521, 65534, 0, 65520, 65534, 0, 65522, 65534, 0, 65524, 65534, 0, 65523, 65534, 0, 65525, 65534, 0, 65526, 65534, 0, 65527, 65534, 0, 65528, 65534, 0, 65529, 65534, 0, 65530, 65534, 0, 65530, 65533, 0, 65530, 65532, 0, 65530, 65531, 0, 65535, 5, 0, 65535, 4, 0, 65535, 3, 0, 65535, 2, 0, 65535, 1, 0, 17, 65535, 0, 8, 65535, 0, 6, 65535, 0, 5, 65535, 0, 4, 65535, 0, 3, 65535, 0, 0, 65534, 0, 65530, 65530, 0, 65530, 65529, 0, 65535, 0, 0, 65535, 65534, 0, 65535, 65535, 0, 2, 65534, 0, 1, 65534, 0, 7, 65535, 0, 16, 65535, 0, 15, 65535, 0, 14, 65535, 0, 13, 65535, 0, 11, 65535, 0, 12, 65535, 0, 10, 65535, 0, 9, 65535, 0, 7, 5, 0, 8, 4, 0, 7, 4, 0, 9, 4, 0, 65530, 65528, 0, 65519, 65530, 0, 65520, 65530, 0, 65521, 65530, 0, 65522, 65530, 0, 65523, 65530, 0, 65524, 65530, 0, 65518, 65530, 0, 65517, 65530, 0, 65516, 65530, 0, 65515, 65530, 0, 65513, 65529, 0, 65514, 65530, 0, 65513, 65530, 0, 65512, 65530, 0, 65510, 65530, 0, 65511, 65530, 0, 65509, 65529, 0, 65509, 65530, 0, 65508, 65530, 0, 65513, 65527, 0, 65513, 65528, 0, 65513, 65526, 0, 65515, 65526, 0, 65514, 65526, 0, 65516, 65526, 0, 65518, 65526, 0, 65517, 65526, 0, 65520, 65526, 0, 65519, 65526, 0, 65521, 65526, 0, 65522, 65526, 0, 65524, 65526, 0, 65523, 65526, 0, 65525, 65526, 0, 65530, 65527, 0, 65530, 65526, 0, 65530, 65525, 0, 65530, 65524, 0, 65530, 65523, 0, 65530, 65522, 0, 65526, 65521, 0, 65527, 65521, 0, 65530, 65521, 0, 65529, 65521, 0, 65528, 65521, 0, 65525, 65521, 0, 65524, 65521, 0, 65523, 65521, 0, 65522, 65521, 0, 65521, 65521, 0, 65520, 65521, 0, 65519, 65521, 0, 65518, 65521, 0, 65516, 65521, 0, 65517, 65521, 0, 65515, 65521, 0, 65514, 65521, 0, 65513, 65521, 0, 65512, 65521, 0, 65512, 65520, 0, 65512, 65519, 0, 65512, 65517, 0, 65512, 65518, 0, 65512, 65516, 0, 65512, 65515, 0, 65512, 65514, 0, 65513, 65514, 0, 65516, 65514, 0, 65514, 65514, 0, 65515, 65514, 0, 65517, 65514, 0, 65518, 65514, 0, 65519, 65514, 0, 65520, 65514, 0, 65521, 65514, 0, 65522, 65515, 0, 65522, 65514, 0, 65522, 65516, 0, 65523, 65516, 0, 65524, 65516, 0, 65525, 65516, 0, 65526, 65516, 0, 65527, 65516, 0, 65528, 65516, 0, 65529, 65516, 0, 65531, 65516, 0, 65530, 65516, 0, 65532, 65516, 0, 65533, 65516, 0, 65534, 65516, 0, 65535, 65516, 0, 1, 65516, 0, 0, 65516, 0, 2, 65516, 0, 3, 65516, 0, 4, 65516, 0, 5, 65517, 0, 5, 65518, 0, 5, 65519, 0, 5, 65520, 0, 5, 65516, 0, 5, 65521, 0, 5, 65522, 0, 5, 65523, 0, 5, 65524, 0, 65535, 65533, 0, 65535, 65532, 0, 65535, 65531, 0, 65535, 65530, 0, 65535, 65529, 0, 0, 65529, 0, 2, 65529, 0, 3, 65529, 0, 1, 65529, 0, 4, 65529, 0, 5, 65528, 0, 5, 65529, 0, 6, 65528, 0, 7, 65528, 0, 8, 65528, 0, 9, 65528, 0, 10, 65528, 0, 11, 65528, 0, 12, 65528, 0, 13, 65528, 0, 14, 65528, 0, 15, 65528, 0, 16, 65528, 0, 16, 65526, 0, 16, 65527, 0, 16, 65525, 0, 11, 65522, 0, 11, 65521, 0, 11, 65519, 0, 11, 65520, 0, 11, 65518, 0, 11, 65517, 0, 11, 65516, 0, 11, 65515, 0, 11, 65514, 0, 11, 65513, 0, 11, 65511, 0, 11, 65512, 0, 12, 65511, 0, 13, 65511, 0, 14, 65511, 0, 15, 65511, 0, 17, 65512, 0, 16, 65511, 0, 17, 65511, 0, 11, 65523, 0, 17, 65513, 0, 17, 65515, 0, 17, 65514, 0, 17, 65516, 0, 17, 65518, 0, 17, 65517, 0, 17, 65519, 0, 17, 65520, 0, 17, 65521, 0, 17, 65522, 0, 17, 65524, 0, 17, 65523, 0, 19, 65535, 0, 18, 65535, 0, 20, 65535, 0, 22, 65535, 0, 21, 65535, 0, 23, 65535, 0, 25, 65535, 0, 24, 65535, 0, 26, 65535, 0, 28, 65535, 0, 27, 65535, 0, 65507, 65530, 0, 23, 65518, 0, 24, 65518, 0, 25, 65518, 0, 26, 65518, 0, 27, 65519, 0, 28, 65517, 0, 28, 65518, 0, 27, 65518, 0, 23, 65519, 0, 23, 65521, 0, 23, 65520, 0, 23, 65522, 0, 23, 65523, 0, 23, 65524, 0, 23, 65525, 0, 23, 65526, 0, 23, 65527, 0, 23, 65528, 0, 24, 65528, 0, 24, 65529, 0, 25, 65529, 0, 26, 65529, 0, 28, 65529, 0, 27, 65529, 0)
}

[node name="enemy2" type="Area3D" parent="." instance=ExtResource("6_yruvq")]
transform = Transform3D(-0.260727, 0.42664, 8.28299e-07, 0.278785, 0.170371, -0.378487, -0.322956, -0.197364, -0.326722, -2.87854, 1.00454, 12.0085)

[node name="AnimationPlayer" type="AnimationPlayer" parent="enemy2"]
libraries = {
"": SubResource("AnimationLibrary_42070")
}
autoplay = "quest_animation"

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 25.7071, 0.396051, -4.09819)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_o0nsf")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Area3D"]
mesh = ExtResource("7_wfyft")

[connection signal="body_entered" from="enemy2" to="Eslim" method="_on_enemy_2_body_entered"]
[connection signal="body_entered" from="Area3D" to="Eslim" method="_on_area_3d_body_entered"]
